--- a/src/components/ContactMe/Contact.css
+++ b/src/components/ContactMe/Contact.css
@@ -1,8 +1,10 @@
 
 #contact {
     
-    /* border: 1px solid yellow; */
-    height: 36vw;
+    border: 1px solid yellow;
+    height: fit-content;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .container.contact__container {
@@ -19,6 +21,7 @@
 
     gap: 1.2rem;
 }
+
 
 .contact__option {
     background: var(--color-bg-variant);
@@ -70,10 +73,25 @@ input, textarea {
 
 /* ------------------------- Media Queries (Medium Screen) ------------------- */
 
+@media screen and (max-width : 1305px) {
+    
+}
+
+/* ------------------------- Media Queries (Medium Screen) ------------------- */
+
 @media screen and (max-width : 1024px) {
     .container.contact__container {
         grid-template-columns: 1fr;
         gap: 2rem;
+    }
+    .contact__option {
+        background: var(--color-bg-variant);
+        padding: 1rem;
+        border-radius: 1.2rem;
+        text-align: center;
+        border: 1px solid transparent;
+        
+        transition: var(--transition);
     }
 }
 
