--- a/src/components/ServicesMe/Services.css
+++ b/src/components/ServicesMe/Services.css
@@ -1,7 +1,10 @@
 
 #service {
 
-    border: 1px solid;
+    border: 1px solid yellow;
+    height: fit-content;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .services__container {
