--- a/src/components/TestimonialMe/Testimonial.css
+++ b/src/components/TestimonialMe/Testimonial.css
@@ -2,6 +2,9 @@
 #testimonial {
 
     border: 1px solid yellow;
+    height: fit-content;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .container.testimonials__container {
