--- a/src/components/ExperienceMe/Experience.css
+++ b/src/components/ExperienceMe/Experience.css
@@ -1,9 +1,9 @@
 
 #experience {
 
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     height: fit-content;
-    padding-top: 1vw;
+    padding-top: 6vw;
     padding-bottom: 1vw;
 }
 
