--- a/src/components/AboutMe/About.css
+++ b/src/components/AboutMe/About.css
@@ -1,9 +1,9 @@
 
 #about {
     
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     height: fit-content;
-    padding-top: 1vw;
+    padding-top: 6vw;
     padding-bottom: 1vw;
 }
 
@@ -23,7 +23,7 @@
 } */
 
 .about__me {
-    border: 1px solid white;
+    /* border: 1px solid white; */
     margin: 2vw 1vw 0 0;
     height: 27rem;
     width: 100%;
@@ -177,7 +177,7 @@
         height: 100%;
     }
     .about__cards {
-        border: 1px solid;
+        /* border: 1px solid; */
         margin: auto;
         width: 65vw;
         display: grid;
