--- a/src/components/HeaderMe/Header.css
+++ b/src/components/HeaderMe/Header.css
@@ -1,7 +1,7 @@
 
 header {
     
-    border: 1px solid;
+    /* border: 1px solid yellow; */
     height: 125vh;
     padding-top: 1rem;
 }
@@ -22,7 +22,6 @@ header {
 }
 
 /* ------------- HeaderSocials -------------*/
-
 .header__socials {
     /* border: 1px solid; */
     display: flex;
@@ -43,7 +42,6 @@ header {
 }
 
 /* ----------- ME ------------- */
-
 .me {
     background: linear-gradient(var(--color-primary), transparent);
     width: 22rem;
@@ -71,12 +69,57 @@ header {
     font-size: 1.5rem;
 }
 
-/* ------------ Media Queries (Medium Devices) ----------- */
+/* ------------ Media Queries (Medium Devices) -----------
 
+@media screen and (max-width : 2400px) {
+
+    header {
+        height: 90vh;
+    }
+    .header__socials{
+        
+        bottom: 4rem;
+    }
+    .scroll__down {
+        bottom: 6rem;
+    }
+
+}
+@media screen and (max-width : 2000px) {
+
+    header {
+        height: 90vh;
+    }
+    .header__socials{
+        
+        bottom: 4rem;
+    }
+    .scroll__down {
+        bottom: 6rem;
+    }
+
+}
 @media screen and (max-width : 1310px) {
 
     header {
-        height: 165vh;
+        height: 92vh;
+    }
+    .header__socials{
+        
+        bottom: 5rem;
+    }
+    .scroll__down {
+        bottom: 9rem;
+    }
+
+}
+
+/* ------------ Media Queries (Medium Devices) ----------- */
+/*
+@media screen and (max-width : 1280px) {
+
+    header {
+        height: 95vh;
     }
     .header__socials{
         
@@ -87,13 +130,11 @@ header {
     }
 
 }
-
-/* ------------ Media Queries (Medium Devices) ----------- */
-
+*/
 @media screen and (max-width : 1024px) {
 
     header {
-        height: 165vh;
+        height: 125vh;
     }
     .header__socials{
         
@@ -109,12 +150,53 @@ header {
 
 
 /* ------------ Media Queries (Small Devices) ----------- */
+/*
+@media screen and (max-width : 912px) {
 
+    header {
+        height: 55vh;
+    }
+    .header__socials{
+        
+        bottom: 5rem;
+    }
+    .scroll__down {
+        bottom: 10rem;
+    }
+}
+@media screen and (max-width : 820px) {
+
+    header {
+        height: 65vh;
+    }
+    .header__socials{
+        
+        bottom: 5rem;
+    }
+    .scroll__down {
+        bottom: 10rem;
+    }
+}
+@media screen and (max-width : 768px) {
+
+    header {
+        height: 75vh;
+    }
+    .header__socials{
+        
+        bottom: 5rem;
+    }
+    .scroll__down {
+        bottom: 10rem;
+    }
+}
+
+*/
 @media screen and (max-width : 600px) {
 
     header {
         
-        height: 175vh;
+        height: 140vh;
     }
 
     .header__socials{
@@ -131,5 +213,190 @@ header {
         right: 7rem;
         font-size: 1.4rem;
     }
-
 }
+/*
+@media screen and (max-width : 540px) {
+
+    header {
+        
+        height: 115vh;
+    }
+
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 7rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 7rem;
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width : 500px) {
+
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 4rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 4rem;
+        font-size: 1.4rem;
+    }
+}
+@media screen and (max-width : 400px) {
+
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 3rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 3rem;
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width : 414px) {
+
+    header {
+        
+        height: 90vh;
+    }
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 3rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 3rem;
+        font-size: 1.4rem;
+    }
+}
+@media screen and (max-width : 394px) {
+
+    header {
+        
+        height: 95vh;
+    }
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 3rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 3rem;
+        font-size: 1.4rem;
+    }
+}
+@media screen and (max-width : 375px) {
+
+    header {
+        
+        height: 120vh;
+    }
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 3rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 3rem;
+        font-size: 1.4rem;
+    }
+}
+@media screen and (max-width : 360px) {
+
+    header {
+        
+        height: 110vh;
+    }
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 3rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 3rem;
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width : 250px) {
+
+    header {
+        
+        height: 110vh;
+    }
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 2rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 2rem;
+        font-size: 1.4rem;
+    }
+}
+@media screen and (max-width : 280px) {
+
+    header {
+        
+        height: 130vh;
+    }
+    .header__socials{
+        padding: 0;
+        font-size: 2rem;
+        bottom: .1rem;
+        display: flex;
+        flex-direction: row;
+        left: 1rem;
+    }
+    .scroll__down {
+        bottom: 1rem;
+        transform: rotate(360deg);
+        right: 1rem;
+        font-size: 1.4rem;
+    }
+} */
