--- a/src/components/PortfolioMe/Portfolio.css
+++ b/src/components/PortfolioMe/Portfolio.css
@@ -1,9 +1,9 @@
 
 #portfolio {
     
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     height: fit-content;
-    padding-top: 1vw;
+    padding-top: 6vw;
     padding-bottom: 1vw;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .portfolio__item-cta {
-    border: 1px solid;
+    /* border: 1px solid; */
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
@@ -66,14 +66,14 @@
         gap: 1.2rem;
     }
     .portfolio__item h3 {
-        border: 1px solid;
+        /* border: 1px solid; */
         font-size: 1.5vw;
         text-align: justify;
         margin: 1.2rem 0 1rem;
     }
     
     .portfolio__item h4 {
-        border: 1px solid;
+        /* border: 1px solid; */
         text-align: justify;
         font-size: 1.5vw;
         margin: 1rem 0 1rem;
